# SFML_RyuPrototype

./: .clang-format  .gitignore  CMakeLists.txt  README.md
00_TestingGround/01_firstApp/: sfml-app
00_TestingGround/02_SFML_GD_BOOK/: CMakeLists.txt
00_TestingGround/02_SFML_GD_BOOK/01_Intro/src/: CMakeLists.txt  game.cpp  game.h  main.cpp
00_TestingGround/02_SFML_GD_BOOK/02_Resources/src/: CMakeLists.txt  assetmanager.cpp  assetmanager.h  assetmanager.inl  game.cpp  game.h  main.cpp
00_TestingGround/02_SFML_GD_BOOK/03_World/src/: CMakeLists.txt  aircarft.h  aircraft.cpp  assetmanager.h  entity.cpp  entity.h  game.cpp  game.h  scenenode.cpp  scenenode.h  world.cpp  world.h
00_TestingGround/02_SFML_GD_BOOK/04_Input/src/: CMakeLists.txt  aircarft.h  aircraft.cpp  assetmanager.h  assetmanager.inl  category.h  command.cpp  command.h  commandqueue.cpp  commandqueue.h  entity.cpp  game.cpp  game.h  main.cpp  player.cpp  player.h  scenenode.cpp  scenenode.h  spritenode.cpp  spritenode.h  world.cpp  world.h
01_QA/: common  todo
TestBed/: CMakeLists.txt  Main.cpp  Utilities.h
assets/spritesheets/configs/: ichiLevel1.json  ichiLevelOne.json  ichi_128x196.json
assets/spritesheets/ichi/: ichi_climb_up_ledge_128x196.json  ichi_level1.json  ichi_spritesheet_level1.json  readme
include/Ryu/Animation/: Animation.h  AnimationData.h  AnimationManager.h  AnimationSpritesheet.h  EditorEnums.h  JsonParser.h  SpritesheetAnimation.h
include/Ryu/Character/: CharacterBase.h  CharacterIchi.h
include/Ryu/Control/: CharacterEnums.h  PlayerController.h
include/Ryu/Core/: AssetIdentifiers.h  AssetManager.h  AssetManager.inl  Category.h  Command.h  CommandQueue.h  Game.h  SpriteNode.h  Utilities.h  World.h
include/Ryu/Debug/: b2DrawSFML.hpp  imGuiDebug.h
include/Ryu/Events/: EventEnums.h  Observer.h  Subject.h
include/Ryu/Physics/: DebugDraw.h  PhysicsObject.h  Raycast.h  Raycasttypes.h
include/Ryu/Scene/: Box.h  ContactListener.h  Crate.h  Entity.h  EntityStatic.h  LevelManager.h  LevelObject.h  SceneNode.h
include/Ryu/Statemachine/: CharacterState.h  CharacterStateClimb.h  CharacterStateDuckEnter.h  CharacterStateDuckIdle.h  CharacterStateDuckWalk.h  CharacterStateFalling.h  CharacterStateFallingEnd.h  CharacterStateIdle.h  CharacterStateJumpNormal.h  CharacterStateJumpUp.h  CharacterStateLedgeClimbUp.h  CharacterStateLedgeHang.h  CharacterStateRun.h
include/RyuSuite/: RAnimator.h
src/: CMakeLists.txt  Main.cpp
src/Animation/: Animation.cpp  AnimationManager.cpp  AnimationSpritesheet.cpp  CMakeLists.txt  JsonParser.cpp  SpritesheetAnimation.cpp
src/Character/: CMakeLists.txt  CharacterBase.cpp  CharacterIchi.cpp
src/Control/: CMakeLists.txt  PlayerController.cpp
src/Core/: CMakeLists.txt  Command.cpp  CommandQueue.cpp  Game.cpp  SpriteNode.cpp  Utilities.cpp  World.cpp
src/Debug/: CMakeLists.txt  b2DrawSFML.cpp  imGuiDebug.cpp
src/Events/: CMakeLists.txt  Subject.cpp
src/Physics/: CMakeLists.txt  DebugDraw.cpp
src/RyuSuite/: CMakeLists.txt  RAnimator.cpp  RAnimator.h
src/Scene/: Box.cpp  CMakeLists.txt  Crate.cpp  Entity.cpp  EntityStatic.cpp  LevelManager.cpp  SceneNode.cpp
src/Statemachine/: CMakeLists.txt  CharacterStateClimb.cpp  CharacterStateDuckEnter.cpp  CharacterStateDuckIdle.cpp  CharacterStateDuckWalk.cpp  CharacterStateFalling.cpp  CharacterStateFallingEnd.cpp  CharacterStateIdle.cpp  CharacterStateJumpNormal.cpp  CharacterStateJumpUp.cpp  CharacterStateLedgeClimbUp.cpp  CharacterStateLedgeHang.cpp  CharacterStateRun.cpp
src/Tests/: CMakeLists.txt  TemplateTest.cpp
src/Tests/Animation/: CMakeLists.txt  JsonParserTest.cpp
